--- a/accordion.css
+++ b/accordion.css
@@ -5,6 +5,9 @@
     text-decoration: none;
     list-style-type: none;
 }
+body{
+    background-color: #D2D7D3;
+}
 .middle{
     position: absolute;
     top: 50%;
